examples/test/testpolicy4382.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4382
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key14: value18
      key31: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value48
      podSelector:
        matchLabels:
          key28: value27
          key10: value27
          key13: value23
